# nevermail

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  nevermail.desktop
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: code-conventions.md  gmail.md  state-machine-contract.md
resources/: com.neverlight.email.desktop  com.neverlight.email.metainfo.xml
src/: app.rs  config.rs  dnd_models.rs  main.rs
src/app/: accounts.rs  actions.rs  backfill.rs  body.rs  compose.rs  mod.rs  navigation.rs  search.rs  setup.rs  sync.rs  sync_apply.rs  types.rs  watch.rs
src/core/: imap.rs  keyring.rs  mime.rs  mod.rs  models.rs  smtp.rs  store.rs
src/core/store/: commands.rs  handle.rs  queries.rs  schema.rs
src/ui/: compose_dialog.rs  message_list.rs  message_view.rs  mod.rs  sidebar.rs
