[package]
name = "nevermail"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A COSMIC desktop email client"

[dependencies]
# COSMIC UI framework
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [
    "tokio",
    "winit",
    "wgpu",
    "markdown",
    "xdg-portal",
] }

# Mail engine
melib = { version = "0.8", default-features = false, features = ["sqlite3", "imap"] }
indexmap = { version = "2", features = ["serde"] }
futures = "0.3"

# SMTP sending (Phase 3)
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# HTML rendering (privacy-safe sanitization)
html-safe-md = { version = "0.0.1" }

# Local cache
rusqlite = { version = "0.37", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Credential storage
keyring = { version = "3", features = ["sync-secret-service"] }

# XDG directory resolution
dirs = "6"

# URI parsing (file:// URIs from drag-and-drop)
url = "2"

# XDG portal file transfer (drag-and-drop from file managers)
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }

# Open URLs in browser
open = "5"

# Desktop notifications
notify-rust = "4"

# Logging
log = "0.4"
env_logger = "0.11"
