[workspace]
members = ["nevermail-core", "."]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"

[package]
name = "nevermail"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A COSMIC desktop email client"

[dependencies]
# Core email engine
nevermail-core = { path = "nevermail-core" }

# COSMIC UI framework
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [
    "tokio",
    "winit",
    "wgpu",
    "markdown",
    "xdg-portal",
] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# XDG directory resolution
dirs = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.11"

# URI parsing (file:// URIs from drag-and-drop)
url = "2"

# XDG portal file transfer (drag-and-drop from file managers)
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }

# Desktop notifications
notify-rust = "4"
