[package]
name = "neverlight-mail"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A COSMIC desktop email client"

[dependencies]
# Core email engine
neverlight-mail-core = { path = "../neverlight-mail-core" }

# COSMIC UI framework
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [
    "tokio",
    "winit",
    "wgpu",
    "markdown",
    "xdg-portal",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XDG directory resolution
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# URI parsing (file:// URIs from drag-and-drop)
url = "2"

# XDG portal file transfer (drag-and-drop from file managers)
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }

# Desktop notifications
notify-rust = "4"

